<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="kmTotal">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_for_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_por_litro">Km por litro</string>
    <string name="spendTotal">Seu gasto total será de:</string>
    <string name="valueTotal">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="Fill_in_Empty_fields">Preencha todos os campos!</string>
</resources>