<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/edit_distance"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Distância"       />
    <TextView
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kmTotal"
        android:textAlignment="center"/>


    <EditText
        android:id="@+id/edit_price"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Preço"       />
    <TextView
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_for_liter"
        android:textAlignment="center"/>


    <EditText
        android:id="@+id/edit_autonomy"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Autonomia"        />
    <TextView
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/km_por_litro"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/spendTotal"/>

    <TextView
        android:id="@+id/txt_valorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        android:text="@string/valueTotal"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/calculate"
        android:textSize="20sp"/>


</LinearLayout>